# systemd-credsubst

./: Cargo.toml  README.md  default.nix  deny.toml  flake.nix  rust-toolchain.toml
.github/: codecov.yaml
.github/workflows/: ci.yaml  update-flake.yaml
nixos/lib/: default.nix
nixos/pkgs/install/: default.nix
nixos/tests/: nixos-test-systemd-credsubst.nix
nixos/tests/nixos-test-mk-load-credential-option/: default.nix  module-systemd-credsubst-test.nix
src/: main.rs
tests/: credsubst.rs
